An <area> element remains focusable even though its associated <img> is not rendered. https://bugs.webkit.org/show_bug.cgi?id=71788

Patch by Antaryami Pandia <antaryami.pandia@motorola.com> on 2012-03-26
Reviewed by Andy Estes.

Source/WebCore:

HTMLAreaElement::isFocusable() needs to consider the display and
visibility state.

Test: fast/events/tab-test-not-visible-imagemap.html

* html/HTMLAreaElement.cpp:
(WebCore::HTMLAreaElement::imageElement):
(WebCore::HTMLAreaElement::isFocusable):
* html/HTMLAreaElement.h: Make imageElement() const.
(HTMLAreaElement):

LayoutTests:

Test sequential focus navigation.

* fast/events/tab-test-not-visible-imagemap-expected.txt: Added.
* fast/events/tab-test-not-visible-imagemap.html: Added.

Canonical link: https://commits.webkit.org/99571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112134 268f45cc-cd09-0410-ab3c-d52691b4dbfc